--- a/miext/Makefile.am
+++ b/miext/Makefile.am
@@ -5,7 +5,7 @@ endif
 if XQUARTZ
 SUBDIRS += rootless
 endif
-if XWIN
+if XWIN_MULTIWINDOWEXTWM
 SUBDIRS += rootless
 endif
 DIST_SUBDIRS = damage shadow cw rootless
