XQuartz: Unify how we set our bitmasks for visuals (cherry picked from commit c230b52c27ce50ac6c27011ec8e88f1b263b25f9)

--- a/hw/xquartz/Makefile.am
+++ b/hw/xquartz/Makefile.am
@@ -42,6 +42,7 @@ EXTRA_DIST = \
 	X11Controller.h \
 	applewmExt.h \
 	darwin.h \
+	darwinfb.h \
 	darwinEvents.h \
 	keysym2ucs.h \
 	pseudoramiX.h \
