exa: A simple 3rd backend implementation.
- Based on driver pixmaps with some changes (completely transparent to driver).
- It helps with the problem of known software fallbacks, such as trapezoids.
- exaDoMigration is now called for all cases that provide a do_migration hook.
- exa_migration.c is renamed to exa_migration_classic.c

--- a/exa/Makefile.am
+++ b/exa/Makefile.am
@@ -18,8 +18,10 @@ libexa_la_SOURCES = \
 	exa.c \
 	exa.h \
 	exa_classic.c \
-	exa_migration.c \
+	exa_migration_classic.c \
 	exa_driver.c \
+	exa_mixed.c \
+	exa_migration_mixed.c \
 	exa_accel.c \
 	exa_glyphs.c \
 	exa_offscreen.c \
