Fix blddir != srcdir builds of solaris-*.il files
Fixes http://bugs.freedesktop.org/show_bug.cgi?id=17509

Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>

--- a/hw/xfree86/os-support/solaris/Makefile.am
+++ b/hw/xfree86/os-support/solaris/Makefile.am
@@ -14,7 +14,7 @@ SOLARIS_INOUT_SRC = solaris-@SOLARIS_INOUT_ARCH@.S
 DISTCLEANFILES = solaris-@SOLARIS_INOUT_ARCH@.il
 
 solaris-@SOLARIS_INOUT_ARCH@.il: solaris-@SOLARIS_INOUT_ARCH@.S
-	$(CPP) -P -DINLINE_ASM solaris-@SOLARIS_INOUT_ARCH@.S > $@
+	$(CPP) -P -DINLINE_ASM $(srcdir)/solaris-@SOLARIS_INOUT_ARCH@.S > $@
 
 noinst_LTLIBRARIES = libsolaris.la
 libsolaris_la_SOURCES = sun_init.c \
