ddx: fix xf86Config.a generation
We were generating a shared library, but this lib is foobar, the parser
requires some symbols from the X server or from the program its being linked
into. If the program its being linked into (say a python .so) has symbol
visibility enabled then it will fail to dynamic link, also if this .so has
symbol visiblity enabled it will fail to dynamic link.

Screw it go back to a .a file really unless someone cleans it up properly.

Signed-off-by: Dave Airlie <airlied@redhat.com>

--- a/hw/xfree86/Makefile.am
+++ b/hw/xfree86/Makefile.am
@@ -53,7 +53,7 @@ libxorg_la_LIBADD = \
             loader/libloader.la \
             os-support/libxorgos.la \
             common/libcommon.la \
-            parser/libxf86config.la \
+            parser/libxf86config_internal.la \
             dixmods/libdixmods.la \
             modes/libxf86modes.la \
             ramdac/libramdac.la \
