parser: make libxf86config_internal.la not installed.

--- a/hw/xfree86/parser/Makefile.am
+++ b/hw/xfree86/parser/Makefile.am
@@ -1,5 +1,5 @@
 if INSTALL_LIBXF86CONFIG
-lib_LTLIBRARIES = libxf86config_internal.la
+noinst_LTLIBRARIES = libxf86config_internal.la
 lib_LIBRARIES = libxf86config.a
 LIBHEADERS = \
 	xf86Optrec.h \
