shave: use CC tag variable on libtool
This fix scratchbox compilation.

Signed-off-by: Tiago Vignatti <tiago.vignatti@nokia.com>
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/shave-libtool.in
+++ b/shave-libtool.in
@@ -12,7 +12,7 @@ lt_unmangle ()
 }
 
 # the real libtool to use
-LIBTOOL="$1"
+LIBTOOL="$1 --tag=CC"
 shift
 
 # if 1, don't print anything, the underlaying wrapper will do it
