dmx: use top_builddir, not top_srcdir to get libxfixes.la
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Tested-by: Byeong-ryeol Kim <brofkims@gmail.com>

--- a/hw/dmx/Makefile.am
+++ b/hw/dmx/Makefile.am
@@ -87,7 +87,7 @@ XDMX_LIBS = \
         config/libdmxconfig.a \
 	$(MAIN_LIB) \
 	$(XSERVER_LIBS) \
-	$(top_srcdir)/xfixes/libxfixes.la
+	$(top_builddir)/xfixes/libxfixes.la
 
 Xdmx_LDFLAGS = $(LD_EXPORT_SYMBOLS_FLAG)
 Xdmx_DEPENDENCIES= $(XDMX_LIBS)
