xfree86: Change default font path to match configure.ac's --default-font-path.
Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>
Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/hw/xfree86/Makefile.am
+++ b/hw/xfree86/Makefile.am
@@ -109,12 +109,7 @@ endif
 
 CPP_FILES_FLAGS = \
 	$(MANDEFS) \
-	-DLOCALFONTPATH="\"$(BASE_FONT_PATH)/local\"" \
-	-DMISCFONTPATH="\"$(BASE_FONT_PATH)/misc\"" \
-	-DT1FONTPATH="\"$(BASE_FONT_PATH)/Type1\"" \
-	-DTRUETYPEFONTPATH="\"$(BASE_FONT_PATH)/TTF\"" \
-	-DDPI75FONTPATH="\"$(BASE_FONT_PATH)/75dpi\"" \
-	-DDPI100FONTPATH="\"$(BASE_FONT_PATH)/100dpi\"" \
+	-DDEFAULTFONTPATH="\"$(COMPILEDDEFAULTFONTPATH)\"" \
 	-DMODULEPATH=\"$(DEFAULT_MODULE_PATH)\"
 
 relink:
