Xming: update .rc file
Remove the obsolete DISCARDABLE flag in the .rc file
Replace the obsolete DIALOG resource with DIALOGEX in the .rc file

Signed-off-by: Jon TURNEY <jon.turney@dronecode.org.uk>

--- a/hw/xwin/XWin.rc
+++ b/hw/xwin/XWin.rc
@@ -36,7 +36,7 @@
  */
 
 /* About */
-ABOUT_BOX DIALOG DISCARDABLE  32, 32, 240, 105
+ABOUT_BOX DIALOGEX 32, 32, 240, 105
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_TABSTOP  | DS_CENTERMOUSE
 CAPTION "About " PROJECT_NAME
 FONT 8, "MS Sans Serif"
@@ -58,7 +58,7 @@ END
 
 /* Depth change */
 
-DEPTH_CHANGE_BOX DIALOG DISCARDABLE	32, 32, 180, 100
+DEPTH_CHANGE_BOX DIALOGEX 32, 32, 180, 100
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | DS_CENTERMOUSE
 FONT 8, "MS Sans Serif"
 CAPTION PROJECT_NAME
@@ -72,7 +72,7 @@ END
 
 /* Exit */
 
-EXIT_DIALOG DIALOG DISCARDABLE	32, 32, 180, 78
+EXIT_DIALOG DIALOGEX 32, 32, 180, 78
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_VISIBLE | WS_TABSTOP | DS_CENTERMOUSE
 FONT 8, "MS Sans Serif"
 CAPTION "Exit " PROJECT_NAME "?"
@@ -89,7 +89,7 @@ END
  * Menus
  */
 
-IDM_TRAYICON_MENU MENU DISCARDABLE
+IDM_TRAYICON_MENU MENU
 BEGIN
 	POPUP "TRAYICON_MENU"
 	BEGIN
@@ -105,5 +105,5 @@ END
  * Icons
  */
 
-IDI_XWIN		ICON	DISCARDABLE	"X.ico"
-IDI_XWIN_BOXED		ICON	DISCARDABLE	"X-boxed.ico"
+IDI_XWIN		ICON	"X.ico"
+IDI_XWIN_BOXED		ICON	"X-boxed.ico"
