Add (ok, fix) support for DTrace under OS X (cherry picked from commit 8428a57184f542941d2c8c90e97d18e111a69dd2)

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ xorg-server.pc
 xorg-server-*.tar.bz2
 xorg-server-*.tar.gz
 stamp-h?
+dix/Xserver-dtrace.h
 do-not-use-config.h
 do-not-use-config.h.in
 dix/dix.c
