Put tests for zero-sized strings in quotes (#24060)
X.Org Bug 24060 <http://bugs.freedesktop.org/show_bug.cgi?id=24060>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>

--- a/shave.in
+++ b/shave.in
@@ -75,7 +75,7 @@ esac
 lt_unmangle "$lt_output"
 output=$last_result
 
-if test -z $V; then
+if test -z "$V"; then
     if test $pass_through -eq 0; then
         echo "$Q$output"
     fi
